# looprs

./: .env.example  .env.nu  .envrc  .gitignore  .health-baseline.json  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cruxfile  IDEAS.md  LICENSE  Makefile  README.md  SECURITY.md  bacon.toml  justfile  looprs.agent.json  rustqual.toml  taskit.toml
.config/: nextest.toml  rail.toml
.ctx/: HANDOFF.looprs.looprs.yaml
.ctx/memory-bank/: depgraph-report.html
.devcontainer/: devcontainer.json  setup.sh
.github/: copilot-instructions.md
.github/workflows/: bump-version.yml  ci.yml  release.yml
.looprs/: README.md  config.json  models.toml.example  provider-config.md  provider.json.example
.looprs/agents/: README.md  planner.yaml  reviewer.yaml
.looprs/commands/: README.md  build.yaml  check.yaml  commit.yaml  diff.yaml  doc.yaml  fine-tune.yaml  fix.yaml  git.yaml  help.yaml  lint.yaml  model-status.yaml  model.yaml  outsource.yaml  refactor.yaml  reset-model.yaml  score-session.yaml  test.yaml
ai_docs/: CONTEXT_SYSTEM_COMPLETE.ai.md  CONTEXT_SYSTEM_IMPLEMENTATION.ai.md  DEVTOOLS_GUIDE.ai.md  IMPLEMENTATION_STATUS.ai.md  TESTING.ai.md
crates/agent-app/: Cargo.toml
crates/agent-app/src/: agents.rs  lib.rs  workflow.rs
crates/agent-bin/: Cargo.toml
crates/agent-bin/src/: main.rs
crates/http-api-adapter/: Cargo.toml
crates/http-api-adapter/src/: lib.rs
crates/jira-adapter/: Cargo.toml
crates/jira-adapter/src/: lib.rs
crates/llm-openai-adapter/: Cargo.toml
crates/llm-openai-adapter/src/: lib.rs
crates/looprs/: Cargo.toml
crates/looprs-cli/: Cargo.toml
crates/looprs-cli/src/: cli.rs  lib.rs  main.rs  repl.rs
crates/looprs-cli/src/runtime/: events.rs  facade.rs  mod.rs  session.rs
crates/looprs-core/: Cargo.toml
crates/looprs-core/src/: ai_types.rs  api.rs  events.rs  lib.rs  macros.rs  observation.rs  ports.rs  types.rs
crates/looprs-core/src/adapters/: channel_broker.rs  fs_session_store.rs  mod.rs  null_output.rs  terminal_output.rs
crates/looprs-core/src/ports/: inference_provider.rs  message_broker.rs  mod.rs  observation_store.rs  plugin_executor.rs  session_store.rs  test_contracts.rs  user_output.rs
crates/looprs-desktop/: Cargo.toml
crates/looprs-desktop/benches/: desktop_benchmarks.rs
crates/looprs-desktop/src/: bootstrap.rs  lib.rs  main.rs
crates/looprs-desktop/src/services/: agent_adapter.rs  context_engine.rs  generative_ui.rs  mock_browser.rs  mock_server.rs  mock_terminal.rs  mock_ws.rs  mockstation.rs  mod.rs  model_badge.rs  sentiment_ui.rs  sqlite_store.rs  system_monitor.rs
crates/looprs-desktop/src/services/snapshots/: looprs_desktop__services__generative_ui__tests__render_component_code_snapshot.snap
crates/looprs-desktop/src/ui/: context_demo.rs  editor.rs  gen_demo.rs  mod.rs  root.rs  sentiment_demo.rs  terminal.rs
crates/looprs-desktop/src/ui/material/: mod.rs  theme.rs
crates/looprs-desktop/tests/: mockstation_tests.rs  property_tests.proptest-regressions  property_tests.rs  sqlite_store_tests.rs
crates/looprs-desktop/tests/integration/: desktop_flow.rs
crates/looprs-desktop/tests/ui/: editor_tests.rs  mod.rs  root_tests.rs  terminal_tests.rs
crates/looprs/baml_src/: chat.baml  clients.baml  generators.baml
crates/looprs/proptest-regressions/skills/: parser.txt
crates/looprs/src/: agent.rs  agents.rs  app_config.rs  approval.rs  commands.rs  config_file.rs  errors.rs  file_refs.rs  fs_mode.rs  git_info.rs  jj.rs  lib.rs  model_badge.rs  models_config.rs  observability.rs  observation_manager.rs  rules.rs  sanitize.rs  scorer.rs  seed.rs  shell.rs  state.rs  system_monitor.rs  types.rs  ui.rs
crates/looprs/src/adapters/: mcp_executor.rs  mod.rs  plugin_executor.rs  retry_provider.rs  sqlite_session_store.rs  ui_output.rs
crates/looprs/src/baml_client/: baml_source_map.rs  mod.rs
crates/looprs/src/baml_client/functions/: async_client.rs  sync_client.rs
crates/looprs/src/baml_client/stream_types/: classes.rs  mod.rs
crates/looprs/src/baml_client/type_builder/: classes.rs  mod.rs
crates/looprs/src/baml_client/types/: classes.rs  mod.rs
crates/looprs/src/hooks/: executor.rs  mod.rs  parser.rs
crates/looprs/src/pipeline/: context_compact.rs  logging.rs  mod.rs
crates/looprs/src/plugins/: binaries.rs
crates/looprs/src/providers/: anthropic.rs  anthropic_sdk.rs  baml_provider.rs  gemini.rs  local.rs  mod.rs  openai.rs  openai_sdk.rs
crates/looprs/src/skills/: discovery.rs  loader.rs  parser.rs
crates/looprs/src/tools/: availability.rs  bash.rs  edit.rs  error.rs  executor.rs  glob.rs  grep.rs  mod.rs  nu.rs  read.rs  write.rs
docs/: ownership-model.md
fuzz/: Cargo.toml
fuzz/corpus/fuzz_parse_skill/: empty_name  no_frontmatter  no_triggers  seed_missing_name.md  seed_no_body.md  seed_non_utf8  seed_valid.md  valid
fuzz/corpus/fuzz_strip_ansi/: ansi_color  nested_csi  osc_title  plain  seed_bare_esc  seed_color  seed_nested  seed_plain
fuzz/fuzz_targets/: fuzz_parse_skill.rs  fuzz_strip_ansi.rs
mockstation/: Cargo.toml  README.md
mockstation/src/: lib.rs
mockstation/src/helpers/: mod.rs  scenario_builder.rs
mockstation/src/protocols/: browser.rs  cli.rs  mod.rs
mockstation/src/sessions/: bridge.rs  buffer.rs  mod.rs  procman.rs
mockstation/src/ui/: mock_browser.rs  mock_cli.rs  mock_server.rs  mock_terminal.rs  mock_ws.rs  mod.rs
patches/: patch.diff
scripts/: README.md  bump-version.sh
specs/: config-ownership-and-seed-command.md
src/: agent.rs  agents.rs  api.rs  app_config.rs  approval.rs  bd.rs  cli.rs  commands.rs  config.rs  config_file.rs  context.rs  errors.rs  events.rs  file_refs.rs  fs_mode.rs  jj.rs  kan.rs  lib.rs  main.rs  model_badge.rs  models_config.rs  observability.rs  observation.rs  observation_manager.rs  ports.rs  rules.rs  sanitize.rs  scorer.rs  seed.rs  session_log.rs  state.rs  tools.rs  trace.rs  types.rs  ui.rs
src/adapters/: mod.rs  (+4 more)
tests/: README.md  cli_smoke.rs  model_precedence.rs  models_config_tests.rs  session_log_tests.rs
xtask/: master-hash
(+97 files in other folders)
