[workspace]
members = [
    "crates/looprs-core",
    "crates/looprs",
    "crates/looprs-cli",
]
resolver = "2"
exclude = ["fuzz"]

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
