[workspace]
members = [
    "crates/looprs-core",
    "crates/looprs",
    "crates/looprs-cli",
    "xtask",
]
resolver = "2"
exclude = ["fuzz"]

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Joseph O'Brien <joeobrien516@gmail.com>"]
repository = "https://github.com/89jobrien/looprs"
homepage = "https://github.com/89jobrien/looprs"
documentation = "https://docs.rs/looprs"
