[workspace]
members = [
    "crates/looprs-core",
    "crates/looprs",
    "crates/looprs-cli",
    "xtask",
]
resolver = "2"
exclude = ["fuzz"]

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
authors = ["Joseph O'Brien <joeobrien516@gmail.com>"]
repository = "https://github.com/89jobrien/looprs"
homepage = "https://github.com/89jobrien/looprs"
documentation = "https://docs.rs/looprs"

[workspace.dependencies]
anyhow = "^1.0.101" #unified
chrono = { version = "^0.4.44", features = ["serde"] } #unified
colored = "^2.2.0" #unified
dirs = "^5.0.1" #unified
looprs = { path = "crates/looprs", version = "^0.5.0" } #unified
looprs-core = { path = "crates/looprs-core", version = "^0.5.0" } #unified
miette = { version = "^7.6.0", features = ["fancy"] } #unified
proptest = "^1.10.0" #unified
serde = { version = "^1.0.228", features = ["derive"] } #unified
serde_json = "^1.0.149" #unified
tempfile = "^3.24.0" #unified
tokio = { version = "^1.49.0", features = ["macros", "rt-multi-thread", "sync"] } #unified
uuid = { version = "^1.21.0", features = ["v4"] } #unified
