[package]
name = "mockstation"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
tokio-tungstenite = "0.23"

# Optional dependencies for future integration
# maestro_companion = { path = "../../maestro/crates/companion" }
# maestro_test_ws = { path = "../../maestro/crates/test-ws" }

[lib]
name = "mockstation"
path = "src/lib.rs"

[dev-dependencies]
