[package]
name = "agent-app"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-domain = { path = "../agent-domain" }
async-trait = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
tokio = { version = "1", features = ["macros"] }
