[package]
name = "http-api-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-domain = { path = "../agent-domain" }
agent-app = { path = "../agent-app" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
