[package]
name = "llm-openai-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-domain = { path = "../agent-domain" }
async-trait = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
