[package]
name = "looprs-cli"
version.workspace = true
edition.workspace = true
description = "looprs binary: interactive REPL and scriptable entrypoint"
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "looprs"
path = "src/main.rs"

[dependencies]
looprs = { path = "../looprs" }
anyhow = "1.0"
colored = "2.1"
dirs = "5"
rustyline = { version = "14.0", features = ["custom-bindings"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.12"
