[package]
name = "looprs-cli"
version.workspace = true
edition.workspace = true
description = "looprs binary: interactive REPL and scriptable entrypoint"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[[bin]]
name = "looprs"
path = "src/main.rs"

[dependencies]
looprs = { path = "../looprs", version = "0.4.0" }
anyhow = "1.0"
dotenvy = "0.15"
colored = "2.1"
dirs = "5"
miette = { version = "7", features = ["fancy"] }
rustyline = { version = "14.0", features = ["custom-bindings"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.12"
proptest = "1"
