[package]
name = "looprs-cli"
version.workspace = true
edition.workspace = true
description = "looprs binary: interactive REPL and scriptable entrypoint"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[[bin]]
name = "looprs"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true } #unified
colored = { workspace = true } #unified
dirs = { workspace = true } #unified
looprs = { workspace = true } #unified
miette = { workspace = true } #unified
rustyline = { version = "14.0", features = ["custom-bindings"] }
serde_json = { workspace = true } #unified
toml = "0.8"
tokio = { workspace = true, features = ["sync"] } #unified

[dev-dependencies]
proptest = { workspace = true } #unified
tempfile = { workspace = true } #unified
