[package]
name = "looprs-core"
version = "0.2.2"
edition = "2024"
description = "Domain types, ports, and macros for looprs"
license = "MIT"
rust-version = "1.88"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_json = "1.0"
