[package]
name = "looprs-core"
version.workspace = true
edition.workspace = true
description = "Domain types, ports, and macros for looprs"
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

[features]
test-contracts = []

[dev-dependencies]
tempfile = "3"

