[package]
name = "looprs-core"
version.workspace = true
edition.workspace = true
description = "Domain types, ports, and macros for looprs"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true } #unified
async-trait = "0.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
chrono = { workspace = true } #unified
serde = { workspace = true } #unified
serde_json = { workspace = true } #unified
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] } #unified
uuid = { workspace = true } #unified

[features]
test-contracts = []

[dev-dependencies]
tempfile = { workspace = true } #unified

