[package]
name = "looprs-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
freya = { version = "0.3.0", default-features = false, features = ["custom-tokio-rt", "skia"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
looprs = { path = "../.." }
looprs-desktop-baml-client = { path = "../looprs-desktop-baml-client" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
