[package]
name = "looprs-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
freya = { version = "0.4.0-rc.10", default-features = false, features = ["skia-engine", "terminal", "code-editor"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
looprs = { path = "../.." }
looprs-desktop-baml-client = { path = "../looprs-desktop-baml-client" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
freya-testing = "0.4.0-rc.10"           # headless UI testing
proptest = "1.4"
insta = { version = "1.34", features = ["json"] }
tokio-test = "0.4"                       # async test utilities
criterion = "0.6"                        # benchmarking
tempfile = "3.12"                        # temporary directories for tests
serial_test = "3.2"                      # serialize tests that use global state

[[bench]]
name = "desktop_benchmarks"
harness = false
