[package]
name = "looprs"
version.workspace = true
edition.workspace = true
description = "Concise coding assistant REPL — core library"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

# Allow clippy lints that fire only in BAML-generated code under src/baml_client/.
[lints.clippy]
empty_line_after_doc_comments = "allow"
map_clone = "allow"
unwrap_or_default = "allow"
new_without_default = "allow"

[dependencies]
looprs-core = { path = "../looprs-core", version = "0.4.0" }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
colored = "2.1"
glob = "0.3"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
async-openai = { version = "0.33.0", default-features = false, features = ["rustls", "chat-completion", "byot"] }
claudius = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
miette = { version = "7", features = ["fancy"] }
thiserror = "1.0"
toml = "0.8"
dirs = "5"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
sysinfo = "0.30"
walkdir = "2.5"
baml = "0.219.0"

[dev-dependencies]
looprs-core = { path = "../looprs-core", version = "0.4.0", features = ["test-contracts"] }
tempfile = "3.12"
criterion = "0.6"
proptest = "1.4"
insta = { version = "1.34", features = ["json", "yaml"] }
