[package]
name = "looprs"
version.workspace = true
edition.workspace = true
description = "Concise coding assistant REPL — core library"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

# Allow clippy lints that fire only in BAML-generated code under src/baml_client/.
[lints.clippy]
empty_line_after_doc_comments = "allow"
map_clone = "allow"
unwrap_or_default = "allow"
new_without_default = "allow"

[dependencies]
anyhow = { workspace = true } #unified
async-openai = { version = "0.33.0", default-features = false, features = ["rustls", "chat-completion", "byot"] }
async-trait = "0.1"
baml = "0.219.0"
chrono = { workspace = true } #unified
claudius = "0.18.0"
colored = { workspace = true } #unified
dirs = { workspace = true } #unified
env_logger = "0.11"
glob = "0.3"
libc = "0.2"
log = "0.4"
looprs-core = { workspace = true } #unified
miette = { workspace = true } #unified
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { workspace = true } #unified
serde_json = { workspace = true } #unified
serde_yaml = "0.9"
sysinfo = "0.30"
thiserror = "1.0"
tokio = { workspace = true, features = ["sync"] } #unified
toml = "0.8"
uuid = { workspace = true } #unified
walkdir = "2.5"

[dev-dependencies]
criterion = "0.6"
insta = { version = "1.34", features = ["json", "yaml"] }
looprs-core = { workspace = true, features = ["test-contracts"] } #unified
proptest = { workspace = true } #unified
tempfile = { workspace = true } #unified
